# TRE-example-challenge

./: 404.html  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  solution.Rmd  solution.ipynb
.github/workflows/: docs.yaml
challenge/: __main__.py  index.html
docs/: challenge.md  index.md  usage.md
search/: search_index.json
usage/: index.html
