[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "challenge"
description = 'An example TRE challenge'
license = "MIT"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "faker",
  "numpy",
  "pandas",
  "typer"
]

[project.optional-dependencies]
dev = [
  "flake8",
  "isort",
  "mkdocs",
  "mypy"
]

[project.scripts]
challenge = "challenge.__main__:app"

[project.urls]
Documentation = "https://github.com/unknown/challenge#readme"
Issues = "https://github.com/unknown/challenge/issues"
Source = "https://github.com/unknown/challenge"
